2023/Sintaxis y Semántica de los Lenguajes/TP_INTEGRADOR/obj/TP_INT.output
Estado 166 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: declaracion
    4     | sentencia
    5     | error ';'

    6 $@1: /* vacío */

    7 $@2: /* vacío */

    8 declaracion: NOMBRE_TIPO $@1 punteroOpc IDENTIFICADOR arrayOpc $@2 bifurcacionDeclaraciones

    9 punteroOpc: /* vacío */
   10           | '*' punteroOpc

   11 arrayOpc: /* vacío */
   12         | '[' exp ']' arrayOpc

   13 bifurcacionDeclaraciones: declaracionFuncion
   14                         | declaracionVariable

   15 $@3: /* vacío */

   16 declaracionVariable: inicializacionOpcional $@3 op_RecursionListaDeDeclaradores ';'

   17 op_RecursionListaDeDeclaradores: /* vacío */

   18 $@4: /* vacío */

   19 op_RecursionListaDeDeclaradores: ',' declarador $@4 op_RecursionListaDeDeclaradores

   20 $@5: /* vacío */

   21 declarador: punteroOpc IDENTIFICADOR arrayOpc $@5 inicializacionOpcional

   22 inicializacionOpcional: /* vacío */
   23                       | '=' exp

   24 exp: expAsignacion

   25 expAsignacion: expCondicional
   26              | expUnaria operAsignacion expAsignacion

   27 operAsignacion: '='
   28               | OP_MAS_IG

   29 expCondicional: expOr
   30               | expOr '?' exp ':' expCondicional

   31 expOr: expAnd opRecursionOr

   32 opRecursionOr: /* vacío */
   33              | OR expAnd opRecursionOr

   34 expAnd: expIgualdad opRecursionAnd

   35 opRecursionAnd: /* vacío */
   36               | AND expIgualdad opRecursionAnd

   37 expIgualdad: expRelacional noTerminal3

   38 noTerminal3: noTerminal2 noTerminal3
   39            | /* vacío */

   40 noTerminal2: OP_COMP expRelacional
   41            | SIMB_DIFF expRelacional

   42 expRelacional: expAditiva opRecursionExpRelacional

   43 opRecursionExpRelacional: /* vacío */
   44                         | desigualdad opRecursionExpRelacional

   45 desigualdad: '>' '=' expAditiva
   46            | '>' expAditiva
   47            | '<' '=' expAditiva
   48            | '<' expAditiva

   49 expAditiva: expMultiplicativa opRecursionExpAditiva

   50 opRecursionExpAditiva: /* vacío */
   51                      | op_Suma_Resta expMultiplicativa opRecursionExpAditiva

   52 op_Suma_Resta: '+'
   53              | '-'

   54 expMultiplicativa: expUnaria primerOperando

   55 primerOperando: segundoOperando primerOperando
   56               | /* vacío */

   57 segundoOperando: '*' expUnaria
   58                | '/' expUnaria

   59 expUnaria: expPostfijo eliminaRecursividad
   60          | OP_ADD expUnaria
   61          | OP_SUB expUnaria
   62          | operUnario expUnaria

   63 operUnario: '*'
   64           | '&'
   65           | '-'
   66           | '!'

   67 eliminaRecursividad: parteOpcional eliminaRecursividad
   68                    | /* vacío */

   69 parteOpcional: OP_ADD
   70              | OP_SUB

   71 expPostfijo: expPrimaria opRecursionExpPostfijo

   72 expPrimaria: IDENTIFICADOR
   73            | NUM
   74            | FLOAT
   75            | LITERAL_CADENA
   76            | CONSTANTE_CARACTER
   77            | '(' exp ')'

   78 opRecursionExpPostfijo: /* vacío */
   79                       | op_Llave_Parentesis opRecursionExpPostfijo

   80 op_Llave_Parentesis: '[' exp ']'
   81                    | '(' op_listaArgumentos ')'

   82 op_listaArgumentos: /* vacío */
   83                   | listaArgumentos

   84 listaArgumentos: paramInv opRecursionListaArgum

   85 opRecursionListaArgum: /* vacío */
   86                      | ',' paramInv opRecursionListaArgum

   87 paramInv: IDENTIFICADOR
   88         | NUM
   89         | FLOAT
   90         | LITERAL_CADENA
   91         | CONSTANTE_CARACTER

   92 $@6: /* vacío */

   93 declaracionFuncion: '(' $@6 op_listaParametros ')' division_decla_y_def

   94 division_decla_y_def: ';'
   95                     | sentenciaCompuesta

   96 op_listaParametros: /* vacío */
   97                   | listaParametros

   98 listaParametros: parametro op_masParametros

   99 op_masParametros: /* vacío */
  100                 | ',' parametro op_masParametros

  101 $@7: /* vacío */

  102 parametro: $@7 NOMBRE_TIPO punteroOpc IDENTIFICADOR arrayOpc

  103 sentencias: /* vacío */
  104           | sentencia sentencias
  105           | declaracion sentencias
  106           | error ';'

  107 sentencia: sentenciaCompuesta
  108          | sentenciaExpresion
  109          | sentenciaSalto
  110          | sentenciaIteracion
  111          | sentenciaSeleccion

  112 sentenciaCompuesta: '{' sentencias '}'

  113 sentenciaExpresion: opc ';'

  114 sentenciaSalto: RETURN opc ';'

  115 opc: /* vacío */
  116    | exp

  117 $@8: /* vacío */

  118 sentenciaIteracion: WHILE $@8 '(' exp ')' sentencia

  119 $@9: /* vacío */

  120 sentenciaIteracion: DO $@9 sentencia WHILE '(' exp ')' ';'

  121 $@10: /* vacío */

  122 sentenciaIteracion: FOR $@10 '(' opc ';' opc ';' opc ')' sentencia

  123 $@11: /* vacío */

  124 sentenciaSeleccion: IF $@11 '(' exp ')' sentencia opcionElse

  125 $@12: /* vacío */

  126 sentenciaSeleccion: SWITCH $@12 '(' exp ')' sentencia

  127 opcionElse: /* vacío */
  128           | ELSE sentencia


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 66
'&' (38) 64
'(' (40) 77 81 93 118 120 122 124 126
')' (41) 77 81 93 118 120 122 124 126
'*' (42) 10 57 63
'+' (43) 52
',' (44) 19 86 100
'-' (45) 53 65
'/' (47) 58
':' (58) 30
';' (59) 5 16 94 106 113 114 120 122
'<' (60) 47 48
'=' (61) 23 27 45 47
'>' (62) 45 46
'?' (63) 30
'[' (91) 12 80
']' (93) 12 80
'{' (123) 112
'}' (125) 112
error (256) 5 106
NUM (258) 73 88
FLOAT (259) 74 89
NOMBRE_TIPO (260) 8 102
IDENTIFICADOR (261) 8 21 72 87 102
LITERAL_CADENA (262) 75 90
OR (263) 33
AND (264) 36
OP_ADD (265) 60 69
OP_SUB (266) 61 70
OP_MAS_IG (267) 28
OP_COMP (268) 40
SIMB_DIFF (269) 41
RETURN (270) 114
DO (271) 120
WHILE (272) 118 120
IF (273) 124
ELSE (274) 128
FOR (275) 122
SWITCH (276) 126
CONSTANTE_CARACTER (277) 76 91


No terminales con las reglas donde aparecen

$accept (42)
    en la izquierda: 0
input (43)
    en la izquierda: 1 2, en la derecha: 0 2
line (44)
    en la izquierda: 3 4 5, en la derecha: 2
declaracion (45)
    en la izquierda: 8, en la derecha: 3 105
$@1 (46)
    en la izquierda: 6, en la derecha: 8
$@2 (47)
    en la izquierda: 7, en la derecha: 8
punteroOpc (48)
    en la izquierda: 9 10, en la derecha: 8 10 21 102
arrayOpc (49)
    en la izquierda: 11 12, en la derecha: 8 12 21 102
bifurcacionDeclaraciones (50)
    en la izquierda: 13 14, en la derecha: 8
declaracionVariable (51)
    en la izquierda: 16, en la derecha: 14
$@3 (52)
    en la izquierda: 15, en la derecha: 16
op_RecursionListaDeDeclaradores (53)
    en la izquierda: 17 19, en la derecha: 16 19
$@4 (54)
    en la izquierda: 18, en la derecha: 19
declarador (55)
    en la izquierda: 21, en la derecha: 19
$@5 (56)
    en la izquierda: 20, en la derecha: 21
inicializacionOpcional (57)
    en la izquierda: 22 23, en la derecha: 16 21
exp (58)
    en la izquierda: 24, en la derecha: 12 23 30 77 80 116 118 120
    124 126
expAsignacion (59)
    en la izquierda: 25 26, en la derecha: 24 26
operAsignacion (60)
    en la izquierda: 27 28, en la derecha: 26
expCondicional (61)
    en la izquierda: 29 30, en la derecha: 25 30
expOr (62)
    en la izquierda: 31, en la derecha: 29 30
opRecursionOr (63)
    en la izquierda: 32 33, en la derecha: 31 33
expAnd (64)
    en la izquierda: 34, en la derecha: 31 33
opRecursionAnd (65)
    en la izquierda: 35 36, en la derecha: 34 36
expIgualdad (66)
    en la izquierda: 37, en la derecha: 34 36
noTerminal3 (67)
    en la izquierda: 38 39, en la derecha: 37 38
noTerminal2 (68)
    en la izquierda: 40 41, en la derecha: 38
expRelacional (69)
    en la izquierda: 42, en la derecha: 37 40 41
opRecursionExpRelacional (70)
    en la izquierda: 43 44, en la derecha: 42 44
desigualdad (71)
    en la izquierda: 45 46 47 48, en la derecha: 44
expAditiva (72)
    en la izquierda: 49, en la derecha: 42 45 46 47 48
opRecursionExpAditiva (73)
    en la izquierda: 50 51, en la derecha: 49 51
op_Suma_Resta (74)
    en la izquierda: 52 53, en la derecha: 51
expMultiplicativa (75)
    en la izquierda: 54, en la derecha: 49 51
primerOperando (76)
    en la izquierda: 55 56, en la derecha: 54 55
segundoOperando (77)
    en la izquierda: 57 58, en la derecha: 55
expUnaria (78)
    en la izquierda: 59 60 61 62, en la derecha: 26 54 57 58 60 61
    62
operUnario (79)
    en la izquierda: 63 64 65 66, en la derecha: 62
eliminaRecursividad (80)
    en la izquierda: 67 68, en la derecha: 59 67
parteOpcional (81)
    en la izquierda: 69 70, en la derecha: 67
expPostfijo (82)
    en la izquierda: 71, en la derecha: 59
expPrimaria (83)
    en la izquierda: 72 73 74 75 76 77, en la derecha: 71
opRecursionExpPostfijo (84)
    en la izquierda: 78 79, en la derecha: 71 79
op_Llave_Parentesis (85)
    en la izquierda: 80 81, en la derecha: 79
op_listaArgumentos (86)
    en la izquierda: 82 83, en la derecha: 81
listaArgumentos (87)
    en la izquierda: 84, en la derecha: 83
opRecursionListaArgum (88)
    en la izquierda: 85 86, en la derecha: 84 86
paramInv (89)
    en la izquierda: 87 88 89 90 91, en la derecha: 84 86
declaracionFuncion (90)
    en la izquierda: 93, en la derecha: 13
$@6 (91)
    en la izquierda: 92, en la derecha: 93
division_decla_y_def (92)
    en la izquierda: 94 95, en la derecha: 93
op_listaParametros (93)
    en la izquierda: 96 97, en la derecha: 93
listaParametros (94)
    en la izquierda: 98, en la derecha: 97
op_masParametros (95)
    en la izquierda: 99 100, en la derecha: 98 100
parametro (96)
    en la izquierda: 102, en la derecha: 98 100
$@7 (97)
    en la izquierda: 101, en la derecha: 102
sentencias (98)
    en la izquierda: 103 104 105 106, en la derecha: 104 105 112
sentencia (99)
    en la izquierda: 107 108 109 110 111, en la derecha: 4 104 118
    120 122 124 126 128
sentenciaCompuesta (100)
    en la izquierda: 112, en la derecha: 95 107
sentenciaExpresion (101)
    en la izquierda: 113, en la derecha: 108
sentenciaSalto (102)
    en la izquierda: 114, en la derecha: 109
opc (103)
    en la izquierda: 115 116, en la derecha: 113 114 122
sentenciaIteracion (104)
    en la izquierda: 118 120 122, en la derecha: 110
$@8 (105)
    en la izquierda: 117, en la derecha: 118
$@9 (106)
    en la izquierda: 119, en la derecha: 120
$@10 (107)
    en la izquierda: 121, en la derecha: 122
sentenciaSeleccion (108)
    en la izquierda: 124 126, en la derecha: 111
$@11 (109)
    en la izquierda: 123, en la derecha: 124
$@12 (110)
    en la izquierda: 125, en la derecha: 126
opcionElse (111)
    en la izquierda: 127 128, en la derecha: 124


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end                desplazar e ir al estado 2
    error               desplazar e ir al estado 3
    NUM                 desplazar e ir al estado 4
    FLOAT               desplazar e ir al estado 5
    NOMBRE_TIPO         desplazar e ir al estado 6
    IDENTIFICADOR       desplazar e ir al estado 7
    LITERAL_CADENA      desplazar e ir al estado 8
    OP_ADD              desplazar e ir al estado 9
    OP_SUB              desplazar e ir al estado 10
    RETURN              desplazar e ir al estado 11
    DO                  desplazar e ir al estado 12
    WHILE               desplazar e ir al estado 13
    IF                  desplazar e ir al estado 14
    FOR                 desplazar e ir al estado 15
    SWITCH              desplazar e ir al estado 16
    CONSTANTE_CARACTER  desplazar e ir al estado 17
    '*'                 desplazar e ir al estado 18
    '-'                 desplazar e ir al estado 19
    '&'                 desplazar e ir al estado 20
    '!'                 desplazar e ir al estado 21
    '('                 desplazar e ir al estado 22
    '{'                 desplazar e ir al estado 23

    ';'  reduce usando la regla 115 (opc)

    line                ir al estado 24
    declaracion         ir al estado 25
    exp                 ir al estado 26
    expAsignacion       ir al estado 27
    expCondicional      ir al estado 28
    expOr               ir al estado 29
    expAnd              ir al estado 30
    expIgualdad         ir al estado 31
    expRelacional       ir al estado 32
    expAditiva          ir al estado 33
    expMultiplicativa   ir al estado 34
    expUnaria           ir al estado 35
    operUnario          ir al estado 36
    expPostfijo         ir al estado 37
    expPrimaria         ir al estado 38
    sentencia           ir al estado 39
    sentenciaCompuesta  ir al estado 40
    sentenciaExpresion  ir al estado 41
    sentenciaSalto      ir al estado 42
    opc                 ir al estado 43
    sentenciaIteracion  ir al estado 44
    sentenciaSeleccion  ir al estado 45


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    5 line: error . ';'

    ';'  desplazar e ir al estado 46


estado 4

   73 expPrimaria: NUM .

    $default  reduce usando la regla 73 (expPrimaria)


estado 5

   74 expPrimaria: FLOAT .

    $default  reduce usando la regla 74 (expPrimaria)


estado 6

    8 declaracion: NOMBRE_TIPO . $@1 punteroOpc IDENTIFICADOR arrayOpc $@2 bifurcacionDeclaraciones

    $default  reduce usando la regla 6 ($@1)

    $@1  ir al estado 47


estado 7

   72 expPrimaria: IDENTIFICADOR .

    $default  reduce usando la regla 72 (expPrimaria)


estado 8

   75 expPrimaria: LITERAL_CADENA .

    $default  reduce usando la regla 75 (expPrimaria)


estado 9

   60 expUnaria: OP_ADD . expUnaria

    NUM                 desplazar e ir al estado 4
    FLOAT               desplazar e ir al estado 5
    IDENTIFICADOR       desplazar e ir al estado 7
    LITERAL_CADENA      desplazar e ir al estado 8
    OP_ADD              desplazar e ir al estado 9
    OP_SUB              desplazar e ir al estado 10
    CONSTANTE_CARACTER  desplazar e ir al estado 17
    '*'                 desplazar e ir al estado 18
    '-'                 desplazar e ir al estado 19
    '&'                 desplazar e ir al estado 20
    '!'                 desplazar e ir al estado 21
    '('                 desplazar e ir al estado 22

    expUnaria    ir al estado 48
    operUnario   ir al estado 36
    expPostfijo  ir al estado 37
    expPrimaria  ir al estado 38


estado 10

   61 expUnaria: OP_SUB . expUnaria

    NUM                 desplazar e ir al estado 4
    FLOAT               desplazar e ir al estado 5
    IDENTIFICADOR       desplazar e ir al estado 7
    LITERAL_CADENA      desplazar e ir al estado 8
    OP_ADD              desplazar e ir al estado 9
    OP_SUB              desplazar e ir al estado 10
    CONSTANTE_CARACTER  desplazar e ir al estado 17
    '*'                 desplazar e ir al estado 18
    '-'                 desplazar e ir al estado 19
    '&'                 desplazar e ir al estado 20
    '!'                 desplazar e ir al estado 21
    '('                 desplazar e ir al estado 22

    expUnaria    ir al estado 49
    operUnario   ir al estado 36
    expPostfijo  ir al estado 37
    expPrimaria  ir al estado 38


estado 11

  114 sentenciaSalto: RETURN . opc ';'

    NUM                 desplazar e ir al estado 4
    FLOAT               desplazar e ir al estado 5
    IDENTIFICADOR       desplazar e ir al estado 7
    LITERAL_CADENA      desplazar e ir al estado 8
    OP_ADD              desplazar e ir al estado 9
    OP_SUB              desplazar e ir al estado 10
    CONSTANTE_CARACTER  desplazar e ir al estado 17
    '*'                 desplazar e ir al estado 18
    '-'                 desplazar e ir al estado 19
    '&'                 desplazar e ir al estado 20
    '!'                 desplazar e ir al estado 21
    '('                 desplazar e ir al estado 22

    $default  reduce usando la regla 115 (opc)

    exp                ir al estado 26
    expAsignacion      ir al estado 27
    expCondicional     ir al estado 28
    expOr              ir al estado 29
    expAnd             ir al estado 30
    expIgualdad        ir al estado 31
    expRelacional      ir al estado 32
    expAditiva         ir al estado 33
    expMultiplicativa  ir al estado 34
    expUnaria          ir al estado 35
    operUnario         ir al estado 36
    expPostfijo        ir al estado 37
    expPrimaria        ir al estado 38
    opc                ir al estado 50


estado 12

  120 sentenciaIteracion: DO . $@9 sentencia WHILE '(' exp ')' ';'

    $default  reduce usando la regla 119 ($@9)

    $@9  ir al estado 51


estado 13

  118 sentenciaIteracion: WHILE . $@8 '(' exp ')' sentencia

    $default  reduce usando la regla 117 ($@8)

    $@8  ir al estado 52


estado 14

  124 sentenciaSeleccion: IF . $@11 '(' exp ')' sentencia opcionElse

    $default  reduce usando la regla 123 ($@11)

    $@11  ir al estado 53


estado 15

  122 sentenciaIteracion: FOR . $@10 '(' opc ';' opc ';' opc ')' sentencia

    $default  reduce usando la regla 121 ($@10)

    $@10  ir al estado 54


estado 16

  126 sentenciaSeleccion: SWITCH . $@12 '(' exp ')' sentencia

    $default  reduce usando la regla 125 ($@12)

    $@12  ir al estado 55


estado 17

   76 expPrimaria: CONSTANTE_CARACTER .

    $default  reduce usando la regla 76 (expPrimaria)


estado 18

   63 operUnario: '*' .

    $default  reduce usando la regla 63 (operUnario)


estado 19

   65 operUnario: '-' .

    $default  reduce usando la regla 65 (operUnario)


estado 20

   64 operUnario: '&' .

    $default  reduce usando la regla 64 (operUnario)


estado 21

   66 operUnario: '!' .

    $default  reduce usando la regla 66 (operUnario)


estado 22

   77 expPrimaria: '(' . exp ')'

    NUM                 desplazar e ir al estado 4
    FLOAT               desplazar e ir al estado 5
    IDENTIFICADOR       desplazar e ir al estado 7
    LITERAL_CADENA      desplazar e ir al estado 8
    OP_ADD              desplazar e ir al estado 9
    OP_SUB              desplazar e ir al estado 10
    CONSTANTE_CARACTER  desplazar e ir al estado 17
    '*'                 desplazar e ir al estado 18
    '-'                 desplazar e ir al estado 19
    '&'                 desplazar e ir al estado 20
    '!'                 desplazar e ir al estado 21
    '('                 desplazar e ir al estado 22

    exp                ir al estado 56
    expAsignacion      ir al estado 27
    expCondicional     ir al estado 28
    expOr              ir al estado 29
    expAnd             ir al estado 30
    expIgualdad        ir al estado 31
    expRelacional      ir al estado 32
    expAditiva         ir al estado 33
    expMultiplicativa  ir al estado 34
    expUnaria          ir al estado 35
    operUnario         ir al estado 36
    expPostfijo        ir al estado 37
    expPrimaria        ir al estado 38


estado 23

  112 sentenciaCompuesta: '{' . sentencias '}'
